<resources>
    <string name="app_name">ABCall</string>
    <string name="error1">El campo es requerido y no debe estar vacio</string>
    <string name="error2">El campo es requerido y no debe estar vacio</string>
    <string name="error3">El campo es de maximo de %1$d caracteres</string>
    <string name="error4">Credenciales invalidas</string>
    <string name="error5">El campo es de minimo %1$d caracteres y máximo %2$d caracteres</string>
    <string name="error6">Error creando el PQRs</string>
    <string name="ok">Ok</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="o_si_lo_prefieres">o si lo prefieres</string>
    <string name="registrate">Registrate</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
...
    <string name="empresa">Empresa</string>
    <string name="descripcion">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="notificacion">Notificación</string>
    <string name="error_general">Ha ocurrido un error, intentelo de nuevo</string>
    <string name="incidente_creado">La PQR ha sido creada exitosamente</string>
    <string name="error_dropdown">Por favor, selecciona una opción</string>
    <string name="consultar">Consultar</string>
    <string name="ver_notificaciones">Ver notificaciones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="estado">Estado</string>
    <string name="historial_de_pqrs">Historial de PQRs</string>
...
