...
                android:background="#212529"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="#FEFEFE" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:textColor="@color/texto_titulo"
                android:textSize="40dp"
...
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/empresa"
...
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="top"
...
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#0B5ED7"
                    android:textColorLink="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:height="36dp"
                android:onClick="login"
                android:text="@string/ver_notificaciones"
...
