...
            app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
            app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="Correo electrónico"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#0B5ED7"
...
            app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
            app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
...
