...
                android:textColor="@color/white"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:theme="@style/BotonAzul" />

            <Button
                android:id="@+id/btnSubmit2"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:height="36dp"
                android:onClick="login"
                android:text="@string/crear_pqr"
...
