...
                app:placeholderTextColor="@color/m3_textfield_stroke_color_custom"
                app:prefixTextColor="@color/m3_textfield_stroke_color_custom"
                app:startIconTint="@color/white"
                app:suffixTextColor="@color/m3_textfield_stroke_color_custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
...
                android:text="@={viewModel.errorPassword}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:height="36dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
...
